# wildcaddy

./: .gitignore  build.py  config_manager.py  create_dmg.sh  create_icns.sh  generate_folder_structure.sh  hosts_manager.py  proxy_config.json  proxy_manager.py  proxy_server.py  pyproject.toml  utils.py
gui/: add_domain_dialog.py  main_window.py  status_bar_app.py
resources/: wild_caddy_icon.icns
