[tool.poetry]
name = "wildcaddy"
version = "0.1.0"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.1"
aiohttp = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
