[tool.poetry]
name = "wildcaddy"
version = "0.1.0"
description = "A user-friendly GUI application for managing Caddy server as a reverse proxy."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
include = ["resources/*"]

[tool.poetry.dependencies]
python = "<3.14,>=3.8"
pyqt6 = "^6.7.1"
aiohttp = "^3.10.6"
requests = "^2.32.3"
chardet = "^5.2.0"
cryptography = "^43.0.1"
brotli = "^1.1.0"
zstandard = "^0.23.0"
h2 = "^4.1.0"
pyopenssl = "^24.2.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[
#tool.poetry.scripts
#]
#build = "python build.py && ./create_dmg.sh"
#
